The code now reads and write to a ZRD file *using* established code constructs like ZRDDatabaseWriterController, ZRDRayDataPointSerializer, DatabaseWriterFactory, DatabaseExtensionMethods and modified MonteCarloSimulation to use these new constructs to write a ZRDRayDataPoint to a binary file with the appropriate header so that Zemax can import it. Wrote associated unit tests.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -568,6 +568,9 @@
     <Compile Include="..\Vts\MonteCarlo\Controllers\VirtualBoundaryController.cs">
       <Link>MonteCarlo\Controllers\VirtualBoundaryController.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Controllers\ZRDDatabaseWriterController.cs">
+      <Link>MonteCarlo\Controllers\ZRDDatabaseWriterController.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\DataStructuresValidation\DetectorInputs\dMCdROfRhodMuaDetectorInputValidation.cs">
       <Link>MonteCarlo\DataStructuresValidation\DetectorInputs\dMCdROfRhodMuaDetectorInputValidation.cs</Link>
     </Compile>
