--- a/src/Vts.Desktop/packages.config
+++ b/src/Vts.Desktop/packages.config
@@ -16,5 +16,5 @@
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net461" />
   <package id="System.Security.Permissions" version="5.0.0" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net461" />
-  <package id="Unity" version="5.11.10" targetFramework="net461" />
+  <package id="Unity" version="5.11.10" targetFramework="net461" requireReinstallation="true" />
 </packages>
