--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -186,6 +186,12 @@
     <Compile Include="..\Vts.Test\Modeling\Spectroscopy\ChromophoreSpectrumTests.cs">
       <Link>Modeling\Spectroscopy\ChromophoreSpectrumTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\Modeling\Spectroscopy\IntralipidScattererTests.cs">
+      <Link>Modeling\Spectroscopy\IntralipidScattererTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\Modeling\Spectroscopy\MieScattererTests.cs">
+      <Link>Modeling\Spectroscopy\MieScattererTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\Modeling\Spectroscopy\SpectralConverterTests.cs">
       <Link>Modeling\Spectroscopy\SpectralConverterTests.cs</Link>
     </Compile>
