Added RectangularAngledFromCircleSource and unit tests.  Clarified variable descriptions in other "Angled" sources.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -1105,6 +1105,9 @@
     <Compile Include="..\Vts\MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\DirectionalRectangularSource.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\DirectionalRectangularSource.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\RectangularAngledFromCircleSource.cs">
+      <Link>MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\RectangularAngledFromCircleSource.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\RectangularSourceBase.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\RectangularSourceBase.cs</Link>
     </Compile>
