--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -403,6 +403,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\SurfaceEmittingBulkSources\Tubular\LambertianSurfaceEmittingTubularSourceTests.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingBulkSources\Tubular\LambertianSurfaceEmittingTubularSourceTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Sources\SurfaceEmittingFlatSources\ArbitrarySurfaceSource\DirectionalArbitrarySurfaceSourceTests.cs">
+      <Link>MonteCarlo\Sources\SurfaceEmittingFlatSources\ArbitrarySurfaceSource\DirectionalArbitrarySurfaceSourceTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\SurfaceEmittingFlatSources\Circular\CircularAngledFromCircleSourceTests.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSources\Circular\CircularAngledFromCircleSourceTests.cs</Link>
     </Compile>
@@ -430,6 +433,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\SurfaceEmittingFlatSources\SurfaceEmitting2DSourcesValidationData.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSources\SurfaceEmitting2DSourcesValidationData.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Sources\VolumetricSources\Ellipsoidal\CustomVolumetricEllipsoidalSourceTests.cs">
+      <Link>MonteCarlo\Sources\VolumetricSources\Ellipsoidal\CustomVolumetricEllipsoidalSourceTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\VolumetricSources\FluorescenceEmission\AOfRhoAndZLoaderTests.cs">
       <Link>MonteCarlo\Sources\VolumetricSources\FluorescenceEmission\AOfRhoAndZLoaderTests.cs</Link>
     </Compile>
@@ -441,6 +447,9 @@
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\VolumetricSources\FluorescenceEmission\FluorescenceEmissionAOfXAndYAndZSourceTests.cs">
       <Link>MonteCarlo\Sources\VolumetricSources\FluorescenceEmission\FluorescenceEmissionAOfXAndYAndZSourceTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Sources\VolumetricSources\VolumetricCuboidal\IsotropicVolumetricCuboidalSourceTests.cs">
+      <Link>MonteCarlo\Sources\VolumetricSources\VolumetricCuboidal\IsotropicVolumetricCuboidalSourceTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Tissues\BoundedTissueTests.cs">
       <Link>MonteCarlo\Tissues\BoundedTissueTests.cs</Link>
@@ -479,9 +488,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Modeling\Optimizers\" />
-    <Folder Include="MonteCarlo\Sources\SurfaceEmittingFlatSources\ArbitrarySurfaceSource\" />
-    <Folder Include="MonteCarlo\Sources\VolumetricSources\Ellipsoidal\" />
-    <Folder Include="MonteCarlo\Sources\VolumetricSources\VolumetricCuboidal\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
