Fixed a bug in SourceToolbox.UpdateDirectionPositionAfterGivenFlags for BeamRotationFromInwardNormal processing.  In order to get unit tests to pass, needed to modify code in MATLAB script Func_UpdateDirectionAndPositionAfterGivenFlags to agree with bug fix, regenerate the test validation data (which gets written to .txt files), and cut and paste into C# unit tests.  Modified output fprintf to use ", " instead of tab so cut and paste easier.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -430,6 +430,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\DirectionalRectangularSourceTests.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\DirectionalRectangularSourceTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\RectangularAngledFromCircleSourceTests.cs">
+      <Link>MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\RectangularAngledFromCircleSourceTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\SurfaceEmittingFlatSources\SurfaceEmitting2DSourcesValidationData.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSources\SurfaceEmitting2DSourcesValidationData.cs</Link>
     </Compile>
