Updated the position and direction unit tests, created a new test for optical property converter

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -136,6 +136,9 @@
     <Compile Include="..\Vts.Test\Common\Math\InterpolationTests.cs">
       <Link>Common\Math\InterpolationTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\Common\OpticalPropertiesConverterTests.cs">
+      <Link>Common\OpticalPropertiesConverterTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\Common\OpticalPropertiesTests.cs">
       <Link>Common\OpticalPropertiesTests.cs</Link>
     </Compile>
