Fixed the MGRTE issue

--- a/src/Vts.Mgrte.Console/Vts.Mgrte.Console.csproj
+++ b/src/Vts.Mgrte.Console/Vts.Mgrte.Console.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="VirtualPhotonics.Vts" Version="5.0.0" />
+    <ProjectReference Include="..\Vts\Vts.csproj" />
   </ItemGroup>
 
   <ItemGroup>
