--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -49,5 +50,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vts\Vts.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="NLogUnitTest.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
