Separated out the MGRTE code into a separate library

--- a/src/Vts.Mgrte.Console/Vts.Mgrte.Console.csproj
+++ b/src/Vts.Mgrte.Console/Vts.Mgrte.Console.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Vts\Vts.csproj" />
+    <ProjectReference Include="..\Vts.FemModeling\Vts.FemModeling.csproj" />
   </ItemGroup>
 
   <ItemGroup>
