Created new app Vts.MonteCarlo.ZemaxDatabaseConverter app and Test project. Moved prior unit tests that tested ZRD files, ZRDRayDatabaseTests, to Test project.  Now all tests pass except for those in Vts.MonteCarlo.ZemaxDatabaseConverter.Test.  Cleaned up RayDatabaseTests, tests that check if reading/writing to MCCL database works.

--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -60,4 +60,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MonteCarlo\Zemax\" />
+  </ItemGroup>
 </Project>
